fix: ajusted values
